--- a/css/correct.css
+++ b/css/correct.css
@@ -3,6 +3,7 @@
 }
 body{
 	background-color:#f5f5f5;
+    margin-top:50px;
 }
 table{
     border-color:transparent!important;
@@ -17,8 +18,8 @@ table{
     padding: 20px 0px 0px;
     border-bottom: 2px solid #0091ca;
     margin-top:-20px;
-  /*  position: fixed;
-    top:0px;*/
+    position: fixed;
+    top:20px;
     width: 100%;
     margin-bottom:20px;
     z-index:999999;
@@ -28,7 +29,7 @@ table{
 }
 .uk-navbar-brand{
 	font-size:24px!important;
-    margin-left:20px;
+    padding-left:20px;
 }
 .uk-navbar-nav>li>a,.uk-navbar-brand{
 	color:#fff;
